moving the sample PDF into the app_data folder

--- a/TransferEncodingTest/TransferEncodingTest.csproj
+++ b/TransferEncodingTest/TransferEncodingTest.csproj
@@ -71,7 +71,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="TestPDF.pdf" />
+    <None Include="App_Data\TestPDF.pdf" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
