--- a/TransferEncodingTest/TransferEncodingTest.csproj
+++ b/TransferEncodingTest/TransferEncodingTest.csproj
@@ -34,6 +34,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="sharpPDF">
+      <HintPath>..\lib\sharpPDF.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
